# nodejs-raw-unix-pipe

./: .gitignore  CMakeLists.txt  README.md  index.test.ts  index.ts  main.cc  main.h  package-lock.json  package.json  tsdown.config.ts
src/: index.ts
test/: index.test.ts
test/fixtures/: spawn-child-and-send-message.ts
